# SmallPrograms

./: LICENSE  README.md
C-WebServer/: .gitignore  Makefile  README.md
C-WebServer/src/: server.c
C-WebServer/test_website/: index.html  index.js
C-WebServer/test_website/css/: style.css
CatAuth/: README.md
CatAuth/client/: client.py
CatAuth/server/: keys.py  server.py  settings.py  utils.py
CatAuth/server/data/: data.db  settings.json
HashMap/: .gitignore  Makefile  README.md  compile_commands.json  hashmap.c  hashmap.cpp  hashmap.h  hashmap.hpp  impl.c  impl.h  linked_list.c  linked_list.h  linked_list.hpp  main.c  main.cpp
HashMap/include/: hashmap.h
HashMap/src/: hashmap.c  main.c
LeetCode/: README.md
LeetCode/RomanToInteger/: Makefile  main.c  solution.c  solution.h
ReallySmallProjects/: README.md
ReallySmallProjects/Vectors/: .gitignore  main.c  vector.c
ShowTheKey/: README.md  main.py
SqlDataFaker/: .gitignore  config.py  generate_fake_data.py  load_schema.py  main.py  result.txt  schema.json  syntax.py  todolist.md
SqlDataFaker/scripts/: pip_install.bash  pip_install.batch
Vectors/: Makefile  main.c  vector.c  vector.h
templates/: README.md  TODO.md
templates/DiscordPY/: main.py  settings.py
templates/DiscordPY/data/: settings.json
templates/MakeCTemplate/: Makefile  main
templates/MakeCTemplate/src/: main.c
templates/OpenGLTemplateCMake/: .gitignore  CMakeLists.txt  Makefile  OpenGL
templates/OpenGLTemplateLinux/: .gitignore  Makefile  main.cpp
templates/PygameTemplate/: main.py  settings.py
